test/errors/decimal_literal_overflow_fail.hy
// EXPECT_DIAGNOSTIC: Floating-point literal '1e5000' overflowed the representable range
// EXPECT_DIAGNOSTIC: Expected expression after '='
decimal tooLarge = 1e5000
